--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
     <meta name="description"
         content="Linha de Calçados Sociais e Casuais, Diversos Caçados. Botas, Sapatos Sociais, Sapatos Casuais, Tênis Casual Tênis Espetivo.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/css/all.min.css">
+    <!-- STYLE OF PAGE -->
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <!-- STYLE OF CAROUSEL -->
+    <link rel="stylesheet" href="./assets/css/carouselFade.css">
+    <!-- STYLE OF CAROUSEL SLIDE -->
+    <link rel="stylesheet" href="./assets/css/slick.css">
+    <link rel="stylesheet" href="assets/css/carouselSlide.css">
+
 </head>
 
 <body>
@@ -76,15 +83,15 @@
                         <p>Loren ipsum dolor site amet consetetur sedipscing elitr, sed diam nonumy eirmod tempor
                             invidunt ut labore et dolore magna.</p>
                         <div class="buttons">
-                            <button class="btnGender"><a href="#">FEMININO</a></button>
-                            <button class="btnGender"><a href="#">MASCULINO</a></button>
+                            <a href="#"><button class="btnGender">FEMININO</button></a>
+                            <a href="#"><button class="btnGender">MASCULINO</button></a>
                         </div>
                     </div>
                 </div>
-                <div class="carousel-item" data-image="./assets/images/Grupo de máscara 51.jpg" data-position='2'>
+                <div class="carousel-item" data-image="./assets/images/tenis-casual.jpg" data-position='2'>
 
                 </div>
-                <div class="carousel-item" data-image="./assets/images/Grupo de máscara 53.jpg" data-position='3'></div>
+                <div class="carousel-item" data-image="./assets/images/tenis-esportivo.jpg" data-position='3'></div>
                 <div class="controls">
                     <button onClick="prevItem()">
                         <img src="./assets/images/icons/arrow-left.svg" alt="Seta para a Esquerda">
@@ -95,9 +102,195 @@
                 </div>
             </div>
         </section>
+        <section id="cards">
+            <div class="container-cards">
+                <div class="card">
+                    <img src="./assets/images/tenis-casual.jpg" alt="Tênis Casual">
+                    <div class="content">
+                        <h4>CASUAL</h4>
+                        <h1 class="textBorder">TÊNIS</h1>
+                        <a href="#"><button>CONFIRA</button></a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/images/woman.jpg" alt="Tênis Casual">
+                    <div class="content">
+                        <h4>NEW COLLECTION</h4>
+                        <h1>WOMAN</h1>
+                        <a href="#"><button>CONFIRA</button></a>
+                    </div>
+
+                </div>
+            </div>
+            <div class="container-cards">
+                <div class="card">
+                    <img src="./assets/images/man.jpg" alt="Tênis Casual">
+                    <div class="content">
+                        <h4>NEW COLLECTION</h4>
+                        <h1>MAN</h1>
+                        <a href="#"><button>CONFIRA</button></a>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <img src="./assets/images/tenis-esportivo.jpg" alt="Tênis Casual">
+                    <div class="content">
+                        <h4>ESPORTIVO</h4>
+                        <h1 class="textBorder">TÊNIS</h1>
+                        <a href="#"><button>CONFIRA</button></a>
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <section id="products">
+            <div class="title-sec-produc">
+                <h2>MAIS VENDIDOS</h2>
+                <div class="container-filter">
+                    <div>
+                        <button class="prod-filter" id="masculino">MASCULINO</button>
+                        <div class="masc line"></div>
+                    </div>
+                    <div>
+                        <button class="prod-filter active" id="feminino">FEMININO</button>
+                        <div class="femi line active"></div>
+                    </div>
+                </div>
+            </div>
+            <section class="regular slider">
+                <div class="product">
+                    <div class="container-product">
+
+                        <img src="./assets/images/products/sapato1.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="container-product">
+                        <img src="./assets/images/products/sapato2.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="container-product">
+
+                        <img src="./assets/images/products/sapato3.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="container-product">
+
+                        <img src="./assets/images/products/sapato4.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="container-product">
+
+                        <img src="./assets/images/products/sapato3.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="container-product">
+                        <img src="./assets/images/products/sapato1.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="container-product">
+
+                        <img src="./assets/images/products/sapato4.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+                <div class="product">
+                    <div class="container-product">
+
+                        <img src="./assets/images/products/sapato2.jpg">
+                        <div>
+                            <h4>OSFORD C/ SALTO CHOCOLATE</h4>
+                            <h4>LOREM IPSUM</h4>
+                            <h4><b>R$ 199.,99</b></h4>
+                            <h4><b>4X</b> de <b>R$ 49,99</b></h4>
+                        </div>
+                    </div>
+                </div>
+
+            </section>
+        </section>
     </main>
+    <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
     <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/slick.js"></script>
+    <script type="text/javascript">
+        $(document).on('ready', function () {
+            $(".regular").slick({
+                dots: false,
+                infinite: true,
+                slidesToShow: 4,
+                slidesToScroll: 4,
+                responsive: [{
+                        breakpoint: 576,
+                        settings: {
+                            slidesToShow: 1,
+                            slidesToScroll: 1,
+                            infinite: true,
+                            dots: false
+                        }
+                    },
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 2,
+                            infinite: true,
+                            dots: false
+                        }
+                    },
+
+                ]
+            });
+        });
+    </script>
 </body>
 
 </html>
