Creating more Cards

--- a/index.html
+++ b/index.html
@@ -256,6 +256,38 @@
 
             </section>
         </section>
+        <section id="moreCards">
+            <div class="container-moreCards">
+                <div class="card">
+                    <img src="./assets/images/mulher-andando.jpg" alt="Mulher Andando">
+                    <div class="content">
+                        <h4>AS MELHORES</h4>
+                        <h1>SNEAKERS</h1>
+                        <a href="#"><button>CONFIRA</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="container-moreCards">
+                <div class="card">
+                    <img src="./assets/images/tenis.jpg" alt="Tênis">
+                    <div class="content">
+                        <h1 class="textBorder">OFERTAS</h1>
+                        <h4>IMPERDÍVEIS</h4>
+                        <a href="#"><button>CONFIRA</button></a>
+                    </div>
+                </div>
+            </div>
+            <div class="container-moreCards">
+                <div class="card">
+                    <img src="./assets/images/mulher-encostada-na-parede.jpg" alt="Mulher Encostada na parede">
+                    <div class="content">
+                        <h4>NOVA</h4>
+                        <h1>COLEÇÃO</h1>
+                        <a href="#"><button>CONFIRA</button></a>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
