--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <link rel="stylesheet" href="./assets/css/carouselFade.css">
     <!-- STYLE OF CAROUSEL SLIDE -->
     <link rel="stylesheet" href="./assets/css/slick.css">
-    <link rel="stylesheet" href="assets/css/carouselSlide.css">
+    <link rel="stylesheet" href="./assets/css/carouselSlide.css">
+    <!-- STYLE OF PLACE CAROUSEL -->
+    <link rel="stylesheet" href="./assets/css/placeCarousel.css">
 
 </head>
 
@@ -288,11 +290,190 @@
                 </div>
             </div>
         </section>
+        <section id="address">
+            <div class="carousel-address">
+                <div class="photo-of-place">
+                    <div class="place" data-position="2">
+                        <img src="./assets/images/place1-inside.jpg" alt="Lado de dentro da loja">
+                        <div class="logo">
+                            <img src="./assets/images/logo.svg" alt="Logo">
+                        </div>
+                    </div>
+                    <div class="place" data-position="3">
+                        <img src="./assets/images/place1-outside.jpg" alt="Lado de fora da loja">
+                    </div>
+                    <div class="place" data-position="1">
+                        <img src="./assets/images/mulher-encostada-na-parede.jpg" alt="Mulher Encostada na parede">
+                    </div>
+
+
+                </div>
+                <div class="text-about">
+                    <div class="container-text">
+                        <div class="container-title">
+                            <h1>LOJA</h1>
+                            <div>
+                                <h1>
+                                    <b>EURICO</b>
+                                </h1>
+                                <div class="line"></div>
+                            </div>
+                        </div>
+                        <div class="container-place">
+                            <h4>Av. Jandira, 49</h4>
+                            <h4>Moema - São Paulo/SP</h4>
+                            <h4>(11) 5054-8877</h4>
+                            <h4>Estacionamento conveniado</h4>
+                        </div>
+                        <div class="controls">
+                            <button onclick="prevPlace()"><img src="./assets/images/icons/arrow-left-black.svg"
+                                    alt="Seta para Esquerda"></button>
+                            <button onclick="nextPlace()"><img src="./assets/images/icons/arrow-right-black.svg"
+                                    alt="Seta para direita"></button>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section id="instagram">
+            <h1>FOLLOW US</h1>
+            <h3>@EURICO_OFICIAL</h3>
+        </section>
+        <section class="center slider">
+            <div>
+                <img src="./assets/images/instagram1.jpg">
+            </div>
+            <div>
+                <img src="./assets/images/instagram2.jpg">
+            </div>
+            <div>
+                <img src="./assets/images/instagram1.jpg">
+            </div>
+            <div>
+                <img src="./assets/images/instagram3.jpg">
+            </div>
+            <div>
+                <img src="./assets/images/instagram4.jpg">
+            </div>
+        </section>
+        <section id="about">
+            <h1>SOBRE A CASA EURICO</h1>
+            <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Corrupti qui officiis magnam earum omnis quam
+                impedit deleniti. A et necessitatibus fuga molestiae itaque, repellat facilis laboriosam dolores, cum
+                dolorem at?Iste accusamus expedita sint enim rerum totam praesentium exercitationem laborum vel
+                molestiae nostrum architecto voluptates laboriosam aliquam doloremque, sed quas quis, consequuntur error
+                cupiditate ea perferendis distinctio. Harum, eaque adipisci.
+            </p>
+        </section>
+        <section id="newsletter">
+
+
+            <div class="text">
+                <h3>NEWSLETTER</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+            </div>
+            <div class="container-input">
+                <input type="text" id="email" placeholder="E-mail">
+                <button>CADASTRAR</button>
+            </div>
+        </section>
+        <footer>
+            <div class="container">
+                <h3>INSTITUCIONAL</h3>
+                <div class="links">
+                    <a href="#">SOBRE A CASA EURICO</a>
+                    <a href="#">NEWS BLOG</a>
+                    <a href="#">CADASTRE-SE</a>
+                    <a href="#">SHOWROOM</a>
+                </div>
+            </div>
+            <div class="container">
+                <h3>AJUDA E SUPORTE</h3>
+                <div class="links">
+                    <a href="#">POLÍTICA DE TROCAS</a>
+                    <a href="#">ENVIO E ENTREGA</a>
+                    <a href="#">POLÍTICA E PRIVACIDADE</a>
+                    <a href="#">TROCAS E DEVOLUÇÕES</a>
+                </div>
+            </div>
+            <div class="container">
+                <h3>ATENDIMENTO AO CLIENTE</h3>
+                <div class="links">
+                    <h4>
+                        FALE CONOSCO
+                    </h4>
+
+                    <h4>SEG A SEX, 09H ÀS 17H</h4>
+                    <h4>WHATSAPP: <b>(11) 94037-2794</b></h4>
+                    <h4><b>ATENDIMENTO@CASAEURICO.COM.BR</b></h4>
+                </div>
+            </div>
+
+            <div class="container">
+                <h3>FORMAS DE PAGAMENTO</h3>
+                <div class="methods-of-payment">
+                    <div class="method">
+                        <img src="./assets/images/icons/visa.svg" alt="visa">
+                    </div>
+                    <div class="method">
+                        <img src="./assets/images/icons/master-card.svg" alt="Master Card">
+                    </div>
+                    <div class="method">
+                        <img src="./assets/images/icons/elo.svg" alt="elo">
+                    </div>
+                    <div class="method">
+                        <img src="./assets/images/icons/boleto.svg" alt="boleto">
+                    </div>
+                    <div class="method">
+                        <img src="./assets/images/icons/diners-club.svg" alt="Diners Club International">
+                    </div>
+                    <div class="method">
+                        <img src="./assets/images/icons/american-express.svg" alt="American Express">
+                    </div>
+                </div>
+            </div>
+
+            <div class="container">
+                <h3>SEGURANÇA</h3>
+                <div class="encrypt">
+                    <img src="./assets/images/icons/let-s-encrypt.svg" alt="lets encrypt">
+
+                </div>
+            </div>
+            <div class="lastDiv">
+                <div class="socialMedia ld">
+                    <a href="#" target="_blank">
+
+                        <img src="./assets/images/icons/facebook.svg" alt="Facebook">
+                    </a>
+                    <a href="#" target="_blank">
+
+                        <img src="./assets/images/icons/instagram.svg" alt="Instagram">
+                    </a>
+                    <a href="#" target="_blank">
+
+                        <img src="./assets/images/icons/twitter.svg" alt="Twitter">
+                    </a>
+                </div>
+                <div class="copyright ld">
+                    <p>COPYRIGHT AAA - TODOS OS DIREITOS RESERVADOS | E-BUENO Comércio de Calçados e Acessórios - EIRELI
+                    </p>
+                    <p>CNPJ 17.495.410/0001-53 | Rua Costa Aguiar, n-1221 - Ipiranga - CEP 042040-001 São Paulo - SP</p>
+                </div>
+                <div class="container-dev ld">
+                    <img src="./assets/images/icons/econverse-digital.svg" alt="Econverse Digital">
+                    <img src="./assets/images/icons/vtex.svg" alt="Vtex">
+                </div>
+            </div>
+        </footer>
     </main>
     <script src="https://code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.1/js/all.min.js"></script>
     <script src="./assets/js/script.js"></script>
     <script src="./assets/js/slick.js"></script>
+    <script src="./assets/js/placeCarousel.js"></script>
     <script type="text/javascript">
         $(document).on('ready', function () {
             $(".regular").slick({
@@ -305,6 +486,32 @@
                         settings: {
                             slidesToShow: 1,
                             slidesToScroll: 1,
+                            infinite: true,
+                            dots: false
+                        }
+                    },
+                    {
+                        breakpoint: 768,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 2,
+                            infinite: true,
+                            dots: false
+                        }
+                    },
+
+                ]
+            });
+            $(".center").slick({
+                dots: false,
+                infinite: true,
+                slidesToShow: 4,
+                slidesToScroll: 1,
+                responsive: [{
+                        breakpoint: 576,
+                        settings: {
+                            slidesToShow: 2,
+                            slidesToScroll: 2,
                             infinite: true,
                             dots: false
                         }
